samples/_failures_safe/1761439076_343a00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a96baf48.c: In function ‘main’:
./samples/SAFE/__tmp_a96baf48.c:154:33: error: expected ‘)’ at end of input
  154 |                 if (add_matrices
      |                    ~            ^
      |                                 )
./samples/SAFE/__tmp_a96baf48.c:154:17: error: expected declaration or statement at end of input
  154 |                 if (add_matrices
      |                 ^~
./samples/SAFE/__tmp_a96baf48.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a96baf48.c:154:17: error: expected declaration or statement at end of input
